Fix alignment of buttons-container for markdown images

--- a/sass/layout/_markdown.scss
+++ b/sass/layout/_markdown.scss
@@ -80,6 +80,11 @@ h6.markdown__heading {
         .markdown-image-expand__collapse-button {
             z-index: 3;
         }
+
+        .image-preview-utility-buttons-container {
+            top: 14px;
+            right: 12px;
+        }
     }
 
     .markdown-inline-img--loading {
